# sphinx-bootstrap-project-list

./: README.md  pyproject.toml
src/sphinx_bootstrap_project_list/: __init__.py
src/sphinx_bootstrap_project_list/static/: bspl.css
src/sphinx_bootstrap_project_list/templates/: project_list.j2
