[project]
name = "sphinx-bootstrap-project-list"
description = "Sphinx extension for rendering nice-looking project lists using Bootstrap 5"
readme = "README.md"
license = { file = "GPLv3" }
authors = [ { name = "Lucas Pires Camargo" } ]
maintainers = [ { name = "Lucas Pires Camargo" } ]
keywords = ["documentation", "sphinx", "extension", "bootstrap", "html"]
classifiers = [
    "Environment :: Plugins",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
]

requires-python = ">=3.10"
dependencies = [
    "Sphinx >= 4",
    "jinja2"
]

dynamic = ["version"]

[project.optional-dependencies]
thumbs = ["Pillow"]

[project.urls]
homepage = "https://camargo.eng.br/tools/sphinx-bootstrap-project-list/README.html"
repository = "https://github.com/lucaspcamargo/sphinx-bootstrap-project-list"
tracker = "https://github.com/lucaspcamargo/sphinx-bootstrap-project-list/issues"

[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.setuptools.packages.find]
where = ["src"]